# CruxML

./: LICENCE  LICENSE  Notebook.ipynb  README.md  pyproject.toml
examples/: autograd_demo.py  basic_example.py
src/cruxml/: __init__.py  autograd.py  losses.py  nn.py  trainer.py  visualization.py
