[project]
name = "cruxml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jagjeevan Kashid", email = "jagjeevandev97@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
